# Martin-Paper-Reviewer

./: .env.example  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_COMPATIBILITY.md  OPENROUTER_SETUP.md  README.md  USER_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
martin/: __init__.py  __main__.py  config.py  formatter.py  main.py  paper_reviewer.py
martin/models/: __init__.py  paper_text.py
martin/signatures/: __init__.py  analysis.py  assessment.py  extraction.py  literature.py  social.py
martin/tools/: __init__.py  academic_search.py  arxiv_client.py  pdf_extractor.py  real_academic_search.py  semantic_scholar_client.py
tests/: README.md  conftest.py  test_config.py  test_config_integration.py  test_formatter.py  test_integration_validation.py  test_main.py  test_paper_reviewer.py  test_paper_text.py  test_pdf_extractor.py  test_real_literature_comparison.py
tests/fixtures/: api_responses.py  sample_papers.py
